--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Happy Birthday, Nupur Das! 🎂</h1>
+        <h1>Happy Birthday, Avinash kakde! 🎂</h1>
         <p>Will you go on a special birthday date with me? 💖</p>
         <div class="buttons">
             <button class="yes" onclick="showMessage()">YES</button>
